<resources>
    <string name="app_name">Galaxion</string>
    <string name="play">Play</string>
    <string name="name">Name:</string>>
    <string name="menu">MENU</string>>
    <string name="retru">RETRY</string>>
    <string name="next">NEXT</string>>
    <string name="infinity_text">INFINITY \n MODE</string>
    <string name="difficult">Difficulty:</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="your_name">Your name</string>
    <string name="shop">Shop</string>
    <string name="shop2">Skin shop</string>
    <string name="rate_table">Leaderboard</string>
    <string name="closed">Complete the game to unlock this skin</string>
    <string name="inf_loose">Points scored:</string>
    <string name="rate">Leaderboard</string>
    <string name="rating">Rating</string>
    <string name="nickname">Nickname</string>
    <string name="points">Points</string>
    <string name="your_record">Your record: </string>
    <string name="level_on_pause">Level on pause</string>
    <string name="progress_dont_save">When you close a level, the progress will not be saved!</string>
    <string name="continue_b">Continue</string>
    <string name="break_b">Exit</string>
    <string name="current_version" translatable="false">v 1.0.2</string>

    <string-array name="ships">
        <item>Spaceship №1</item>
        <item>Spaceship №2</item>
        <item>Packman</item>
    </string-array>

    <string-array name="bullets">
        <item>Balls</item>
        <item>Diamonds</item>
        <item>Meteors</item>
    </string-array>

    <string-array name="bases">
        <item>Red base</item>
        <item>Blue base</item>
        <item>Gold base</item>
    </string-array>

    <string-array name="start_1">
        <item>Привет, \n </item>
        <item>Меня зовут Элаин. Старый помощник капитана уволился, поэтому теперь я за него.</item>
        <item>Нам с тобой предстоит долгий путь. Для начала, СПАСИ НАС ОТ МЕТЕОРИТОВ, ААААААААААА</item>
    </string-array>

    <string-array name="start_2">
        <item>Ты тоже это заметил? Оказывается, против зеленых метеоритов эффективнее зеленые пули, против красных - красные.</item>
        <item>Но это еще не все. Наши ученые выяснили, что против зеленых метеоритов наименее эффективны синие пули.</item>
        <item>А против желтых метеоритов плохо работают красные пули. Имей это в виду, кэп.</item>
        <item>Кстати они опять нас нашли. Как они это делают!? Удачи в бою, а я пошел спать.</item>
    </string-array>

    <string-array name="start_3">
        <item>Я же забыл тебе кое-что сказать в прошлый раз, поэтому скажу сейчас, вдруг ты не заметил.</item>
        <item>Наши инженеры сделали тебе возможность стрелять пулями разного размера.</item>
        <item>Чем больше пуля - тем больше у нее урон и скорость перезарядки. Надеюсь тебе нравится.</item>
        <item>А теперь вперед отражать очередную атаку.</item>
    </string-array>

    <string-array name="start_4">
        <item>Успел заценить новую способность корабля? Сегодня тебе еще один апгрейд сделали - турель.</item>
        <item>Она появится через 45 секунд после начала атаки, обязательно попробуй.</item>
        <item>Эти уроды опять нас нашли! Ладно, я пошел в пакмана играть, разберись с ними.</item>
    </string-array>

    <string-array name="start_5">
        <item>Мне тут сообщили, что тебе сделали еще одну способность, не знаю правда какую.</item>
        <item>Говорят что-то крутое, мне даже интересно стало. </item>
        <item>Там опять кто то нападает! Удачи, кэп!.</item>
    </string-array>

    <string-array name="start_6">
        <item>Раздведка сообщает, что сейчас к нам приближается новый вид врагов, будь готов.</item>
        <item>Мои источники говорят, что против таких монстров эффективны пули ДРУГОГО цвета</item>
        <item>Мне сказали, что они становятся в 10 раз сильнее, если попасть в них пулей их же цвета. А вот кстати и они!</item>
    </string-array>

    <string-array name="start_7">
        <item>Видимо, я ошибся с советом, хорошо хоть все обошлось.</item>
        <item>Тебе не кажется что нам на корабль нужно еще кого-нибудь взять? Я предлагаю кота.</item>
        <item>Если увидишь - обязательно возьми его к себе, главное не убивай!</item>
    </string-array>

    <string-array name="start_8">
        <item>А я так хотел котенка…</item>
        <item>Они опять нападают, как же я устал от них. Слушай, а может сдадимся?</item>
        <item>Ну правда, тебе не надоело это? Ладно, выбор за тобой, я пошел жрать.</item>
    </string-array>

    <string-array name="start_9">
        <item>Ты так и не надумал сложить оружие? Эх, жаль(</item>
        <item>Там опять какое то новое чудище на подходе, посмотрим что оно из себя представляет.</item>
        <item>О, вот оно идет, В БОООООООЙ!</item>
    </string-array>

    <string-array name="start_10">
        <item></item>
        <item>Я ждал этого дня! В этот раз победа будет за мной! Я привел сюда ЛУЧШУЮ АРМИЮ ГАЛАКТИКИ! Тебе конец, </item>
        <item>Лорд Блэкитус, моя миссия выполнена - вся информация об их планете у вас. Что прикажете делать?</item>
        <item>Ты хорошо поработал… Проблема лишь в том, что ты слишком многое знаешь. Придется решить эту проблему радикально.</item>
        <item>Ты серьезно думаешь победить меня? У меня для тебя есть небольшие подарочки.</item>
        <item>Ох уж эта детская вера в собственные силы… Всё твое старание выглядит жалко.</item>
        <item>Ты мне надоел, я правда устал играться с тобой и давать тебе ложную надежду. Эту волну ты не переживешь</item>
        <item>ТЫ ДУМАЕШЬ ТЫ ПОБЕДИЛ!? НЕ НАДЕЙСЯ! ВСЯ ИНФОРМАЦИЯ О ТВОЕЙ ПЛАНЕТЕ У МЕНЯ! НЕ СЕГОДНЯ, ТАК ЗАВТРА, НО ОНА СТАНЕТ МОЕЙ!!</item>
    </string-array>
</resources>