<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/looser_or_winner"
    android:layout_width="match_parent"
    tools:layout="@layout/looser_or_winner"

    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="473dp"
        android:layout_height="275dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/delete"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"

                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/level_on_pause"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/teal_200"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/text_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/progress_dont_save"
                android:textColor="@color/red_pressed"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/continue_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:backgroundTint="#06AC06"
                    android:insetLeft="30dp"
                    android:insetTop="10dp"
                    android:insetRight="10dp"
                    android:insetBottom="20dp"
                    android:text="@string/continue_b"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp" />

                <Button
                    android:id="@+id/break_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#BC0404"
                    android:clickable="false"
                    android:insetLeft="10dp"
                    android:insetTop="10dp"
                    android:insetRight="30dp"
                    android:insetBottom="20dp"
                    android:text="@string/break_b"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>