<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/looser_or_winner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:backgroundTint="@color/green"
    tools:layout="@layout/looser_or_winner">

    <FrameLayout
        android:layout_width="473dp"
        android:layout_height="275dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/dialog_start"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/arbutus"
                    android:gravity="center|right"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="30dp" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:ems="10"
                    android:fontFamily="@font/arbutus"
                    android:hint="@string/your_name"
                    android:inputType="textPersonName"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="#4F534F" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    style="@android:style/Widget.Holo.ImageButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/circle_button"
                    app:srcCompat="@android:drawable/ic_lock_silent_mode" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_start"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/easy"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:autoText="true"
                            android:text="@string/easy"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <RadioButton
                            android:id="@+id/normal"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:autoText="true"
                            android:text="@string/normal"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <RadioButton
                            android:id="@+id/hard"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:autoText="true"
                            android:elegantTextHeight="false"
                            android:freezesText="false"
                            android:text="@string/hard"
                            android:textColor="@color/white"
                            android:textSize="24sp" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">


                <ImageButton
                    android:id="@+id/close"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/cancel" />

                <ImageButton
                    android:id="@+id/accept"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="90dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/ok" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>