<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_shop"
    tools:context=".Activities.Levels_activity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_weight="2"
                android:backgroundTint="#283FB1"
                android:soundEffectsEnabled="false"
                android:text="1"
                app:cornerRadius="20dp"
                app:strokeColor="#00EBF3"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_marginLeft="30dp"
                android:layout_weight="2"
                android:backgroundTint="#283FB1"
                android:soundEffectsEnabled="false"
                android:text="4"
                app:cornerRadius="20dp"
                app:strokeColor="#00EBF3"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_marginLeft="30dp"
                android:layout_weight="2"
                android:backgroundTint="#283FB1"
                android:soundEffectsEnabled="false"
                android:text="7"
                app:cornerRadius="20dp"
                app:strokeColor="#00EBF3"
                app:strokeWidth="2dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:layout_weight="2"
                android:backgroundTint="#283FB1"
                android:soundEffectsEnabled="false"
                android:text="2"
                app:cornerRadius="20dp"
                app:strokeColor="#00EBF3"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="2"
                android:backgroundTint="#283FB1"
                android:soundEffectsEnabled="false"
                android:text="5"
                app:cornerRadius="20dp"
                app:strokeColor="#00EBF3"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="2"
                android:backgroundTint="#283FB1"
                android:soundEffectsEnabled="false"
                android:text="8"
                app:cornerRadius="20dp"
                app:strokeColor="#00EBF3"
                app:strokeWidth="2dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

                <Button
                    android:id="@+id/ten"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="2"
                    android:backgroundTint="#FF0000"
                    android:soundEffectsEnabled="false"
                    android:text="10"
                    app:cornerRadius="20dp"
                    app:strokeColor="#FFDD00"
                    app:strokeWidth="3dp" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:layout_weight="2"
                android:backgroundTint="#283FB1"
                android:soundEffectsEnabled="false"
                android:text="3"
                app:cornerRadius="20dp"
                app:strokeColor="#00EBF3"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_marginRight="30dp"
                android:layout_weight="2"
                android:backgroundTint="#283FB1"
                android:soundEffectsEnabled="false"
                android:text="6"
                app:cornerRadius="20dp"
                app:strokeColor="#00EBF3"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_marginRight="30dp"
                android:layout_weight="2"
                android:backgroundTint="#283FB1"
                android:soundEffectsEnabled="false"
                android:text="9"
                app:cornerRadius="20dp"
                app:strokeColor="#00EBF3"
                app:strokeWidth="2dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/infinity_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:fontFamily="@font/black_ops_one"
                android:gravity="center"
                android:text="@string/infinity_text"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FF9800"
                android:textStyle="bold"
                android:typeface="normal"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/button_inf"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:backgroundTint="#34BC03"
                android:soundEffectsEnabled="false"
                android:text="@string/play"
                android:textSize="20dp"
                app:cornerRadius="20dp"
                app:strokeColor="#0DFF34"
                app:strokeWidth="3dp" />

            <TextView
                android:id="@+id/your_record"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/your_record"
                android:textColor="#FF9800"
                android:textSize="40dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>